syntax = "proto3";

import "google/protobuf/timestamp.proto";

package reservation;

message Reservation {
  int32 id = 1;
  string name = 2;
  int32 hotelId = 3;
  int32 roomId = 4;
  google.protobuf.Timestamp checkInDate = 5;
  google.protobuf.Timestamp checkOutDate = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

service ReservationService {
  rpc GetReservation(GetReservationRequest) returns (Reservation) {}
  rpc ListReservations(ListReservationsRequest) returns (ListReservationsResponse) {}
  rpc CreateReservation(CreateReservationRequest) returns (Reservation) {}
  rpc UpdateReservation(UpdateReservationRequest) returns (Reservation) {}
  rpc DeleteReservation(DeleteReservationRequest) returns (DeleteReservationResponse) {}
}

message GetReservationRequest {
  int32 id = 1;
}

message ListReservationsRequest {
  int32 hotelId = 1;
  int32 roomId = 2;
  google.protobuf.Timestamp checkInDate = 3;
  google.protobuf.Timestamp checkOutDate = 4;
}

message ListReservationsResponse {
  repeated Reservation reservations = 1;
}

message CreateReservationRequest {
  string name = 1;
  int32 hotelId = 2;
  int32 roomId = 3;
  google.protobuf.Timestamp checkInDate = 4;
  google.protobuf.Timestamp checkOutDate = 5;
}

message UpdateReservationRequest {
  int32 id = 1;
  string name = 2;
  int32 hotelId = 3;
  int32 roomId = 4;
  google.protobuf.Timestamp checkInDate = 5;
  google.protobuf.Timestamp checkOutDate = 6;
}

message DeleteReservationRequest {
  int32 id = 1;
}

message DeleteReservationResponse {
  Reservation reservation = 1;
}

